Removed spacing from quotes + avatar is visible on mobile (resolves #524)

--- a/yafsrc/YetAnotherForum.NET/Content/forum-admin.css
+++ b/yafsrc/YetAnotherForum.NET/Content/forum-admin.css
@@ -7,7 +7,8 @@
   display: inline-block !important;
   float: none !important;
   cursor: pointer;
-  z-index: 50; }
+  z-index: 50;
+  padding: 0.25rem 0.5rem 0.25rem 0; }
 
 .hc-details {
   left: -10px;
